<resources>
    <string name="app_name">Person Profile</string>
    <string name="first_name">First Name</string>
    <string name="family_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="birthdate">Birthdate</string>
    <string name="fname_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="age_hint">eg. 20</string>
    <string name="email_hint">eg. abc@gmail.com</string>
    <string name="phone_hint">xxx-xxx-xxxx</string>
    <string name="set">Set</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="country_state">Country/State</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
