<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shara.assignment2.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        android:ems="10"
        android:layout_below="@+id/fname"
        android:layout_alignStart="@+id/fname"
        android:layout_marginTop="19dp"
        android:id="@+id/lname"
        android:hint="@string/lname_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/age"
        android:layout_below="@+id/lname"
        android:layout_alignParentEnd="true"
        android:hint="@string/age_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/age"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:hint="@string/email_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/phone"
        android:layout_below="@+id/email"
        android:layout_alignParentEnd="true"
        android:hint="@string/phone_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/fname"
        android:hint="@string/fname_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPersonName" />

    <TextView
        android:text="@string/family_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/lname"
        android:layout_alignBottom="@+id/lname"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/fname"
        android:layout_alignBottom="@+id/fname"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/age"
        android:layout_alignBottom="@+id/age"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_alignBaseline="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="@string/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/phone"
        android:layout_alignStart="@+id/textView6" />

    <Button
        android:text="@string/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:onClick="set"/>

    <TextView
        android:text="@string/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/birthdate"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/country_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="24dp"
        android:id="@+id/textView8" />

    <Button
        android:text="@string/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:onClick="set" />

    <Button
        android:text="@string/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="setCS"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/phone"
        android:id="@+id/button8"
        android:onClick="submit"/>

    <TextView
        android:text="@string/country_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/csText"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignStart="@+id/birthdate" />

</RelativeLayout>
